force-app/main/default/objects/Case_Value__mdt/Case_Value__mdt.object-meta.xml
<CustomObject>
    <label>Case Value</label>
    <pluralLabel>Case Values</pluralLabel>
</CustomObject>