force-app/main/default/objects/Case_Value__mdt/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <description>Gross expected fee for this matter type, in dollars.</description>
    <label>Expected Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>