force-app/main/default/objects/Case_Value__mdt/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <description>Intake Incident_Type__c this row values. The row whose DeveloperName is &quot;Default&quot; is the fallback.</description>
    <label>Incident Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>