force-app/main/default/objects/Case_Value__mdt/fields/Sign_Probability__c.field-meta.xml
<CustomField>
    <fullName>Sign_Probability__c</fullName>
    <description>Probability (0.00-1.00) a sent retainer of this type still gets signed.</description>
    <label>Sign Probability</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>